--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,19 @@ html {
  */
 
 body {
-  color: #545149;
+  color: #f4f1ec;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+  color: black;
+  margin: auto;
+  width: 50%;
+ }
